# adnihilator

./: .gitignore  AD_REMOVAL.md  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  adnihilator.toml  pyproject.toml
adnihilator/: __init__.py  ad_keywords.py  ad_llm.py  ad_timestamps.py  audio.py  cli.py  config.py  external_transcript.py  gemini_audio.py  models.py  splice.py  sponsors.py  transcribe.py  transcript.py  two_pass.py
data/descriptions/: all-the-hacks-eoy.txt  animal-spirits-442.txt  filmcast-853.txt
deploy/: README.md  adnihilator.service  nginx-site.conf
docs/plans/: 2025-12-06-web-service-design.md  2025-12-06-web-service-implementation.md  2025-12-09-sponsor-extraction-design.md  2025-12-09-sponsor-extraction-implementation.md  2025-12-12-external-transcript-design.md  2025-12-23-parallel-detection-design.md
scripts/: eval_cuts.py  migrate_add_llm_fields.py  replay_keywords.py  reprocess.py  run-worker.sh.example
tests/: __init__.py  test_ad_keywords.py  test_ad_llm.py  test_audio.py  test_models.py  test_sponsor_integration.py  test_sponsors.py  test_tier0_ad_accuracy.py  test_tier1_ad_accuracy.py  test_tier2_ad_accuracy.py
tests/web/: __init__.py  test_app.py  test_auth.py  test_feed_sync.py  test_feeds.py  test_models.py  test_podcasts.py  test_worker_api.py
tests/worker/: test_client.py  test_r2.py
web/: __init__.py  app.py  auth.py  database.py  dependencies.py  models.py
web/routes/: __init__.py  api.py  feeds.py  opml.py  podcasts.py
web/services/: __init__.py  feed_sync.py  (+2 more)
worker/: __init__.py  client.py  daemon.py  r2.py
(+5 files in other folders)
