[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adnihilator"
version = "0.1.0"
description = "A local-first CLI tool for detecting advertisements in podcasts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "faster-whisper>=1.0.0",
    "typer>=0.9.0",
    "rich>=10.11.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0",
    "openai>=1.0.0",
    "numpy<2.0.0",
    # Web service
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "feedgen>=1.0.0",
    "feedparser>=6.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
adnihilator = "adnihilator.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
